--- a/src/app/UserModule/PurchasesComponent/purchases.component.html
+++ b/src/app/UserModule/PurchasesComponent/purchases.component.html
@@ -174,6 +174,14 @@
           </tr>
           <tr>
             <td style="text-align: right;">
+              <b>Falta por pagar:</b>
+            </td>
+            <td>
+              {{ (getTotal(purchases_list) - getTotalPays(pays)) | currency:'MXN':'symbol-narrow'}}
+            </td>
+          </tr>
+          <tr>
+            <td style="text-align: right;">
               <b>Total a pagar: </b>
             </td>
             <td>
